--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       <span class="emoji">🧮</span>
       <h1>GCSE Maths AI Tutor</h1>
       <p>Ask any maths question and get clear, step-by-step answers</p>
-      <span class="badge">✅ Functional Skills Level 2 · UK Standard</span>
+      <span class="badge">Functional Skills Level 2 · UK Standard</span>
     </div>
 
     <p class="topics-label">Quick topics:</p>
@@ -266,7 +266,7 @@
         id="questionInput"
         placeholder="Type your maths question here...&#10;&#10;e.g. 'What is 35% of 240?'&#10;or 'Solve: 3x + 7 = 22'&#10;or 'How do I find the area of a circle?'"
       ></textarea>
-      <button id="askBtn" onclick="askQuestion()">Ask AI ✨</button>
+      <button id="askBtn" onclick="askQuestion()">Ask AI</button>
     </div>
 
     <div class="answer-box" id="answerBox">
@@ -275,7 +275,7 @@
     </div>
 
     <div class="footer">
-      Powered by Groq AI · Free to use · UK GCSE Standard
+      Powered by Velocity Dynamics · Free to use · UK GCSE Standard
     </div>
 
   </div>
