--- a/index.html
+++ b/index.html
@@ -1,315 +1,326 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-GB">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <title>GCSE Maths AI Tutor</title>
+  <title>MathsAI Pro | GCSE & Functional Skills</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+  
   <style>
+    :root {
+      --bg-dark: #060813;
+      --card-bg: rgba(16, 20, 38, 0.7);
+      --accent-purple: #8b5cf6;
+      --accent-glow: rgba(139, 92, 246, 0.3);
+      --text-primary: #f8fafc;
+      --text-secondary: #94a3b8;
+      --border: rgba(255, 255, 255, 0.1);
+      --input-bg: rgba(0, 0, 0, 0.3);
+    }
 
     /* ===== RESET & BASE ===== */
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
     body {
-      font-family: 'Segoe UI', Arial, sans-serif;
-      background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%);
+      font-family: 'Plus Jakarta Sans', sans-serif;
+      background-color: var(--bg-dark);
+      background-image: 
+        radial-gradient(circle at 0% 0%, rgba(67, 56, 202, 0.15) 0%, transparent 40%),
+        radial-gradient(circle at 100% 100%, rgba(139, 92, 246, 0.15) 0%, transparent 40%);
+      color: var(--text-primary);
       min-height: 100vh;
-      min-height: 100dvh; /* fixes mobile browser bar issue */
       display: flex;
-      align-items: center;
       justify-content: center;
-      padding: 16px;
+      padding: 20px;
     }
 
-    /* ===== MAIN CARD ===== */
-    .container {
-      background: white;
-      border-radius: 20px;
-      padding: 28px 24px;
+    /* ===== CONTAINER ===== */
+    .app-container {
       width: 100%;
-      max-width: 800px;
-      box-shadow: 0 25px 60px rgba(0,0,0,0.4);
+      max-width: 850px;
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
     }
 
     /* ===== HEADER ===== */
-    .header {
+    .glass-header {
       text-align: center;
-      margin-bottom: 24px;
+      padding: 30px 20px;
     }
 
-    .header .emoji {
-      font-size: 2.8rem;
-      display: block;
-      margin-bottom: 8px;
-    }
-
-    .header h1 {
-      font-size: clamp(1.4rem, 5vw, 2rem); /* scales with screen size */
-      color: #1a56a6;
-      margin-bottom: 6px;
-      line-height: 1.2;
-    }
-
-    .header p {
-      color: #6b7280;
-      font-size: clamp(0.85rem, 3vw, 1rem);
-      padding: 0 8px;
-    }
-
-    .badge {
+    .brand-glow {
       display: inline-block;
-      background: #dcfce7;
-      color: #166534;
-      padding: 4px 12px;
-      border-radius: 20px;
-      font-size: 0.8rem;
-      font-weight: 600;
-      margin-top: 8px;
-    }
-
-    /* ===== TOPIC BUTTONS ===== */
-    .topics-label {
-      font-size: 0.85rem;
-      color: #6b7280;
-      font-weight: 600;
+      background: linear-gradient(135deg, #a78bfa 0%, #8b5cf6 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      font-weight: 800;
+      font-size: 2rem;
+      letter-spacing: -1px;
       margin-bottom: 8px;
     }
 
-    .topics {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-      margin-bottom: 20px;
+    .status-badge {
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      background: rgba(34, 197, 94, 0.1);
+      color: #4ade80;
+      padding: 5px 14px;
+      border-radius: 100px;
+      font-size: 0.75rem;
+      font-weight: 600;
+      border: 1px solid rgba(74, 222, 128, 0.2);
     }
 
-    .topic-btn {
-      background: #f3f4f6;
-      border: 2px solid #e5e7eb;
-      border-radius: 20px;
-      padding: 8px 14px;
+    /* ===== MAIN CARD ===== */
+    .main-card {
+      background: var(--card-bg);
+      backdrop-filter: blur(12px);
+      border-radius: 24px;
+      border: 1px solid var(--border);
+      padding: 32px;
+      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
+    }
+
+    .section-title {
+      font-size: 0.85rem;
+      font-weight: 600;
+      color: var(--text-secondary);
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+      margin-bottom: 16px;
+      display: block;
+    }
+
+    /* ===== TOPICS ===== */
+    .topics-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+      gap: 10px;
+      margin-bottom: 32px;
+    }
+
+    .topic-pill {
+      background: rgba(255, 255, 255, 0.03);
+      border: 1px solid var(--border);
+      color: var(--text-primary);
+      padding: 10px;
+      border-radius: 12px;
       cursor: pointer;
-      font-size: 0.82rem;
+      font-size: 0.8rem;
       font-weight: 500;
-      transition: all 0.2s;
-      /* larger tap target for mobile */
-      min-height: 36px;
-      touch-action: manipulation;
+      transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+      text-align: left;
+      display: flex;
+      align-items: center;
+      gap: 8px;
     }
 
-    .topic-btn:hover,
-    .topic-btn:active {
-      background: #1a56a6;
-      color: white;
-      border-color: #1a56a6;
+    .topic-pill:hover {
+      background: rgba(139, 92, 246, 0.1);
+      border-color: var(--accent-purple);
+      transform: translateY(-2px);
+      box-shadow: 0 0 15px var(--accent-glow);
     }
 
     /* ===== INPUT AREA ===== */
-    .input-area {
-      display: flex;
-      flex-direction: column; /* stack on mobile */
-      gap: 12px;
-      margin-bottom: 16px;
+    .input-shell {
+      background: var(--input-bg);
+      border: 1px solid var(--border);
+      border-radius: 18px;
+      padding: 8px;
+      transition: all 0.3s;
+    }
+
+    .input-shell:focus-within {
+      border-color: var(--accent-purple);
+      box-shadow: 0 0 0 4px var(--accent-glow);
     }
 
     textarea {
       width: 100%;
-      padding: 14px 16px;
-      border: 2px solid #e5e7eb;
-      border-radius: 12px;
-      font-size: 1rem;
-      resize: vertical;
-      min-height: 100px;
+      background: transparent;
+      border: none;
+      color: white;
+      padding: 16px;
       font-family: inherit;
-      transition: border-color 0.2s;
-      /* prevents iOS zoom on focus */
-      font-size: 16px;
-    }
-
-    textarea:focus {
+      font-size: 1rem;
+      min-height: 120px;
+      resize: none;
       outline: none;
-      border-color: #1a56a6;
     }
 
-    button#askBtn {
-      width: 100%;
-      background: #1a56a6;
+    .btn-container {
+      display: flex;
+      justify-content: flex-end;
+      padding: 8px;
+    }
+
+    #askBtn {
+      background: var(--accent-purple);
       color: white;
       border: none;
+      padding: 12px 28px;
       border-radius: 12px;
-      padding: 16px;
-      font-size: 1.05rem;
       font-weight: 700;
       cursor: pointer;
-      transition: background 0.2s;
-      /* better tap feel on mobile */
-      touch-action: manipulation;
-      min-height: 52px;
+      transition: all 0.2s;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      box-shadow: 0 4px 15px rgba(139, 92, 246, 0.4);
     }
 
-    button#askBtn:hover { background: #1e40af; }
-    button#askBtn:active { background: #1e3a8a; transform: scale(0.98); }
-    button#askBtn:disabled { background: #9ca3af; cursor: not-allowed; transform: none; }
+    #askBtn:hover {
+      background: #7c3aed;
+      transform: scale(1.02);
+    }
 
-    /* ===== ANSWER BOX ===== */
-    .answer-box {
-      background: #f8fafc;
-      border: 2px solid #e2e8f0;
-      border-radius: 12px;
-      padding: 20px;
+    #askBtn:disabled {
+      background: #475569;
+      cursor: not-allowed;
+      box-shadow: none;
+    }
+
+    /* ===== RESULTS ===== */
+    .answer-card {
+      background: rgba(139, 92, 246, 0.05);
+      border: 1px solid rgba(139, 92, 246, 0.2);
+      border-radius: 20px;
+      padding: 24px;
+      margin-top: 24px;
       display: none;
-      margin-top: 4px;
+      animation: fadeIn 0.5s ease-out;
     }
 
-    .answer-box.visible { display: block; }
+    .answer-card.visible { display: block; }
 
-    .answer-box h3 {
-      color: #1a56a6;
-      margin-bottom: 12px;
-      font-size: 1rem;
+    .answer-header {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      color: var(--accent-purple);
+      font-weight: 700;
+      margin-bottom: 16px;
+      font-size: 0.9rem;
     }
 
     .answer-text {
-      line-height: 1.9;
-      color: #374151;
+      line-height: 1.8;
+      color: #cbd5e1;
       white-space: pre-wrap;
-      font-size: clamp(0.9rem, 3vw, 1rem);
-      word-break: break-word; /* prevents overflow on small screens */
+      font-size: 1rem;
     }
 
-    /* ===== LOADING SPINNER ===== */
-    .loading {
-      text-align: center;
-      color: #6b7280;
-      padding: 12px 0;
+    /* ===== LOADING ===== */
+    .loader {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      color: var(--accent-purple);
+      font-weight: 600;
     }
 
-    .spinner {
-      display: inline-block;
-      width: 22px;
-      height: 22px;
-      border: 3px solid #e5e7eb;
-      border-top: 3px solid #1a56a6;
+    .orbit-spinner {
+      width: 20px;
+      height: 20px;
+      border: 2px solid transparent;
+      border-top-color: var(--accent-purple);
       border-radius: 50%;
-      animation: spin 1s linear infinite;
-      vertical-align: middle;
-      margin-left: 10px;
+      animation: spin 0.8s linear infinite;
     }
 
     @keyframes spin { to { transform: rotate(360deg); } }
+    @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
 
-    .error {
-      color: #dc2626;
-      background: #fef2f2;
-      padding: 12px;
-      border-radius: 8px;
-      font-size: 0.9rem;
-      line-height: 1.6;
-    }
-
-    /* ===== FOOTER ===== */
-    .footer {
+    footer {
       text-align: center;
-      margin-top: 20px;
-      color: #9ca3af;
-      font-size: 0.78rem;
+      padding: 20px;
+      color: var(--text-secondary);
+      font-size: 0.75rem;
+      border-top: 1px solid var(--border);
     }
 
-    /* ===== TABLET AND DESKTOP (side by side button) ===== */
-    @media (min-width: 600px) {
-      .container {
-        padding: 40px;
-      }
-
-      .input-area {
-        flex-direction: row; /* side by side on larger screens */
-        align-items: flex-end;
-      }
-
-      textarea {
-        flex: 1;
-        min-height: 80px;
-      }
-
-      button#askBtn {
-        width: auto;
-        padding: 16px 28px;
-        white-space: nowrap;
-        min-height: auto;
-      }
+    /* ===== MOBILE ===== */
+    @media (max-width: 600px) {
+      .main-card { padding: 20px; }
+      .topics-grid { grid-template-columns: 1fr 1fr; }
+      #askBtn { width: 100%; justify-content: center; }
+      .brand-glow { font-size: 1.5rem; }
     }
-
   </style>
 </head>
 <body>
-  <div class="container">
 
-    <div class="header">
-      <span class="emoji">🧮</span>
-      <h1>GCSE Maths AI Tutor</h1>
-      <p>Ask any maths question and get clear, step-by-step answers</p>
-      <span class="badge">Functional Skills Level 2 · UK Standard</span>
-    </div>
+  <div class="app-container">
+    <header class="glass-header">
+      <div class="status-badge">
+        <span style="width: 8px; height: 8px; background: #4ade80; border-radius: 50%; display: inline-block;"></span>
+        AI Tutor Online
+      </div>
+      <br><br>
+      <h1 class="brand-glow">MathsAI Pro</h1>
+      <p style="color: var(--text-secondary);">GCSE Functional Skills · UK National Standards</p>
+    </header>
 
-    <p class="topics-label">Quick topics:</p>
-    <div class="topics">
-      <button class="topic-btn" onclick="setTopic('percentages')">📊 Percentages</button>
-      <button class="topic-btn" onclick="setTopic('fractions')">½ Fractions</button>
-      <button class="topic-btn" onclick="setTopic('algebra')">𝑥 Algebra</button>
-      <button class="topic-btn" onclick="setTopic('ratio')">⚖️ Ratio</button>
-      <button class="topic-btn" onclick="setTopic('area and perimeter')">📐 Area & Perimeter</button>
-      <button class="topic-btn" onclick="setTopic('statistics')">📈 Statistics</button>
-      <button class="topic-btn" onclick="setTopic('decimals')">🔢 Decimals</button>
-      <button class="topic-btn" onclick="setTopic('volume')">📦 Volume</button>
-    </div>
+    <main class="main-card">
+      <span class="section-title">Step 1: Choose a Topic</span>
+      <div class="topics-grid">
+        <div class="topic-pill" onclick="setTopic('Percentages')">📊 Percentages</div>
+        <div class="topic-pill" onclick="setTopic('Fractions')">½ Fractions</div>
+        <div class="topic-pill" onclick="setTopic('Algebra')">𝑥 Algebra</div>
+        <div class="topic-pill" onclick="setTopic('Ratio')">⚖️ Ratio</div>
+        <div class="topic-pill" onclick="setTopic('Geometry')">📐 Geometry</div>
+        <div class="topic-pill" onclick="setTopic('Statistics')">📈 Statistics</div>
+      </div>
 
-    <div class="input-area">
-      <textarea
-        id="questionInput"
-        placeholder="Type your maths question here...&#10;&#10;e.g. 'What is 35% of 240?'&#10;or 'Solve: 3x + 7 = 22'&#10;or 'How do I find the area of a circle?'"
-      ></textarea>
-      <button id="askBtn" onclick="askQuestion()">Ask AI</button>
-    </div>
+      <span class="section-title">Step 2: Ask Anything</span>
+      <div class="input-shell">
+        <textarea id="questionInput" placeholder="Describe your problem... e.g. 'How do I find the area of a circle with a radius of 5cm?'"></textarea>
+        <div class="btn-container">
+          <button id="askBtn" onclick="askQuestion()">
+            <span>Solve Problem</span>
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="22" y1="2" x2="11" y2="13"></line><polygon points="22 2 15 22 11 13 2 9 22 2"></polygon></svg>
+          </button>
+        </div>
+      </div>
 
-    <div class="answer-box" id="answerBox">
-      <h3>📚 Answer</h3>
-      <div class="answer-text" id="answerText"></div>
-    </div>
+      <div class="answer-card" id="answerBox">
+        <div class="answer-header">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
+          AI TUTOR SOLUTION
+        </div>
+        <div class="answer-text" id="answerText"></div>
+      </div>
+    </main>
 
-    <div class="footer">
-      Powered by Velocity Dynamics · Free to use · UK GCSE Standard
-    </div>
-
+    <footer>
+      Powered by Velocity Dynamics Pro &bull; GCSE Level 2 AI &bull; 2026
+    </footer>
   </div>
 
   <script>
-
-    // Quick topic button fills the textarea
     function setTopic(topic) {
-      document.getElementById('questionInput').value =
+      document.getElementById('questionInput').value = 
         `Give me a practice question about ${topic} at GCSE Functional Skills Level 2, then solve it step by step.`;
-      // scroll down to the button smoothly on mobile
-      document.getElementById('askBtn').scrollIntoView({ behavior: 'smooth', block: 'center' });
+      document.getElementById('questionInput').focus();
     }
 
-    // Main function that sends the question to the backend
     async function askQuestion() {
       const question = document.getElementById('questionInput').value.trim();
       const btn = document.getElementById('askBtn');
       const answerBox = document.getElementById('answerBox');
       const answerText = document.getElementById('answerText');
 
-      if (!question) {
-        alert('Please type a question first!');
-        return;
-      }
+      if (!question) return;
 
-      // Show loading state
       btn.disabled = true;
-      btn.textContent = 'Thinking...';
-      answerBox.className = 'answer-box visible';
-      answerText.innerHTML = '<div class="loading">Your AI tutor is working it out <span class="spinner"></span></div>';
-
-      // Scroll to answer on mobile so user sees it appearing
-      answerBox.scrollIntoView({ behavior: 'smooth', block: 'start' });
+      btn.innerHTML = 'Thinking... <div class="orbit-spinner"></div>';
+      answerBox.className = 'answer-card visible';
+      answerText.innerHTML = '<div class="loader">Computing logic...</div>';
 
       try {
         const response = await fetch('https://gcse-maths-agent.onrender.com/ask', {
@@ -319,33 +330,27 @@
         });
 
         const data = await response.json();
-
+        
         if (data.error) {
-          answerText.innerHTML = `<div class="error">⚠️ Error: ${data.error}</div>`;
+          answerText.innerHTML = `<span style="color: #f87171">⚠️ Error: ${data.error}</span>`;
         } else {
           answerText.textContent = data.answer;
         }
-
       } catch (error) {
-        answerText.innerHTML = `<div class="error">
-          ⚠️ Could not connect to the server.<br><br>
-          If you are running this locally, make sure Flask is running with: <strong>python app.py</strong>
-        </div>`;
+        answerText.innerHTML = `<span style="color: #f87171">⚠️ Server Connection Failed. Check your internet.</span>`;
       }
 
-      // Restore button
       btn.disabled = false;
-      btn.textContent = 'Ask AI ✨';
+      btn.innerHTML = '<span>Solve Problem</span><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="22" y1="2" x2="11" y2="13"></line><polygon points="22 2 15 22 11 13 2 9 22 2"></polygon></svg>';
+      answerBox.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
     }
 
-    // Press Enter to submit (Shift+Enter = new line)
     document.getElementById('questionInput').addEventListener('keydown', (e) => {
       if (e.key === 'Enter' && !e.shiftKey) {
         e.preventDefault();
         askQuestion();
       }
     });
-
   </script>
 </body>
 </html>
